--- a/Proyecto Final/about.html
+++ b/Proyecto Final/about.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div>
             <p>
-                Mi nombre es Erick Urbina Lanzas, tengo 13 años de edad.
+                Mi nombre es Erick Urbina.
                 Estudio en el Colegio Sor Maria Romero 2do año de secundaria.
                 Me gusta aprender cosas nuevas y compartir con mis amigos.
                 En mis tiempos libres veo serie de television sobre medicina
